--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>teste..</title>
-</head>
-<body>
-
-</body>
-</html>
+<?
+Header( “HTTP/1.1 301 Moved Permanently” );
+Header( “Location: https://wa.me/5563992333257” );
+?>
