--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Mix Motors Araguaína</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="3; URL=https://wa.me/5563992333257" />
+     <meta http-equiv="refresh" content="1; URL=https://wa.me/5563992333257" />
    </head>
    <body>
-     <p>Você será redirecionado ao nosso WhatsApp em 3 segundos! </p>
+     <p>Você será redirecionaod ao nosso whatsapp em 2 segundos!</p>
    </body>
 </html>
