--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
      <meta http-equiv="refresh" content="1; URL=https://wa.me/5563992333257" />
    </head>
    <body>
-     <p>Você será redirecionaod ao nosso whatsapp em 2 segundos!</p>
+     <p>Aguarde...</p>
    </body>
 </html>
